<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accessibility_clear_history_text">Clear</string>
    <string name="add_btn">Add</string>
    <string name="alias_camera">拍照|录像</string>
    <string name="alias_clock">世界时间|闹钟|秒表|计时器</string>
    <string name="alias_email">电子邮件</string>
    <string name="alias_file_manager">手机存储|安装文件|压缩包|文稿</string>
    <string name="alias_gallery">视频|照片|自拍</string>
    <string name="alias_gamestore">游戏预约</string>
    <string name="alias_mms">信息</string>
    <string name="alias_notes">备忘录</string>
    <string name="alias_security">垃圾文件清理|内存清理|省电优化|权限管理|流量管理|骚扰拦截|存储空间管理</string>
    <string name="allow_download_dialog_cancel_btn">Cancel</string>
    <string name="allow_download_dialog_message">You are currently using mobile data. Do you want to continue?</string>
    <string name="allow_download_dialog_sure_btn">Continue</string>
    <string name="allowed_search_project">Searchable Items</string>
    <string name="app">Apps</string>
    <string name="app_email_uninstall_dlg_msg_suffix">Once deleted, your calendar, contacts and mail accounts will also be deleted.</string>
    <string name="app_market_search_pos">Search Application</string>
    <string name="app_music_share_uninstall_dlg_msg_suffix">After uninstalling Music Sharing, you will no longer be able to share cloud music to WeChat. If you want to use this feature again in the future, you can reinstall it when selecting to share music. Do you want to uninstall Music Sharing?</string>
    <string name="app_musicfx_uninstall_dlg_msg_suffix">Once deleted, certain audio effect adjustment features of 3rd-party apps will not function properly.</string>
    <string name="app_name">Search</string>
    <string name="app_note_uninstall_dlg_msg_suffix">Once deleted, multiple features will be disabled, but your notes synced will not be lost.</string>
    <string name="app_screen_recorder_uninstall_dlg_msg_suffix">After uninstalling Screen Recorder, the screen recording switch will no longer be usable.</string>
    <string name="app_uninstall_app_dlg_msg_with_prefix">If you want to use this app again in the future, you can reinstall it in the App Market. Do you want to uninstall “%1$s”?</string>
    <string name="app_uninstall_confirm_dlg_msg_prefix">You can re-install from the App Market. Do you want to delete?</string>
    <string name="app_uninstall_dlg_msg_with_prefix">You can re-install from the App Market. Do you want to delete %1$s ?</string>
    <string name="app_yd_dict_uninstall_dlg_msg_suffix">After uninstalling Youdao Dictionary, system-wide dictionary lookup will no longer be available.</string>
    <string name="application_desc">Application</string>
    <string name="application_suggestions">App Suggestions</string>
    <string name="apps_search_activity" />
    <string name="auto_install_log">Installation info</string>
    <string name="auto_install_tips">An installation package has been downloaded; tap Install to leave the app and install the new version.</string>
    <string name="auto_install_title">Install New Version</string>
    <string name="auto_progress_des">Downloading update...</string>
    <string name="auto_progress_title">Download &amp; Update</string>
    <string name="auto_update_cancel">Remind Later</string>
    <string name="auto_update_ignore">Ignore Update</string>
    <string name="auto_update_install">Install Now</string>
    <string name="auto_update_log">Update log</string>
    <string name="auto_update_ok">Update Now</string>
    <string name="auto_update_tip_mobile">The installation package is about %1$s. Downloading over a mobile data connection could result in data charges. Do you want to download now?</string>
    <string name="auto_update_tip_mobile_force">You need to upgrade to this version before you can continue to use it,the installation package is about %1$s. Downloading over a mobile data connection could result in data charges. Do you want to download now?</string>
    <string name="auto_update_tip_wifi">The installation package is about %1$s, do you want to update now?</string>
    <string name="auto_update_tip_wifi_force">The installation package is about %1$s, do you want to update now?</string>
    <string name="auto_update_title">New Version Available</string>
    <string name="auto_update_version">Version: %1$s</string>
    <string name="back_to_settings">Back %s</string>
    <string name="bhm_large_count_format">%d+</string>
    <string name="bhm_title_bar_left_btn">Back</string>
    <string name="bhm_title_bar_right_btn">Cancel</string>
    <string name="browser_search_component">com.android.browser/.BookmarkSearch</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_done">Done</string>
    <string name="bullet_sms_jump_dialog_ask_download">Do you want to download ChatBao?</string>
    <string name="bullet_sms_jump_dialog_content">In ChatBao, you can make money from all sorts of activities, such as chatting, adding friends, shopping, reading and so on. ChatBao is also an IM app of high efficiency, it is optimized for quickly viewing, sending and handling messages.</string>
    <string name="bullet_sms_jump_to_appstore">Go to Download</string>
    <string name="bullet_sms_sub_title">Chat to Make Money.</string>
    <string name="bullet_sms_title">ChatBao</string>
    <string name="cancel">Cancel</string>
    <string name="candidate_copy_tips">Copied to Clipboard</string>
    <string name="candidate_cut_tips">Cut to Clipboard</string>
    <string name="canditate_tips_next_half">to replace the whole sentence</string>
    <string name="canditate_tips_prev_half">Tap the words you want to replace or tap</string>
    <string name="change_settings">Change Settings</string>
    <string name="chose_date">Choose Date</string>
    <string name="clear_history_button">Clear</string>
    <string name="clear_history_dialog_title">Are you sure to clear history records?</string>
    <string name="clear_history_pos">Clear Search History</string>
    <string name="clear_search_desc">clear search</string>
    <string name="clear_shortcuts">Clear shortcuts</string>
    <string name="clear_shortcuts_agree">Clear shortcuts</string>
    <string name="clear_shortcuts_disagree">"Don't clear shortcuts"</string>
    <string name="clear_shortcuts_prompt">"Do you want to clear all shortcuts to recently chosen search suggestions?

To clear your Browser history, use the Browser's settings."</string>
    <string name="clear_shortcuts_summary">Clear shortcuts to recently chosen search suggestions</string>
    <string name="close_pull_down_launcher">After disabling the feature, you can still search through the desktop search app, notification center, and desktop search box etc.</string>
    <string name="cmcc_case_data_status_changed">Switching to SIM %d for Data</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_reminder">Done</string>
    <string name="connect_network_refresh_retry">Please try refreshing after connecting to a network.</string>
    <string name="connection_copy">Connection has been copied</string>
    <string name="contacts">Contacts</string>
    <string name="cootek_classify_book_hotel_airline">Book Hotel / Airline</string>
    <string name="cootek_classify_car_service">Car Service</string>
    <string name="cootek_classify_crank">Harassment</string>
    <string name="cootek_classify_crime">Illegal</string>
    <string name="cootek_classify_customer_service">Customer Service Call</string>
    <string name="cootek_classify_decoration">Contractor</string>
    <string name="cootek_classify_education">Education Service</string>
    <string name="cootek_classify_enterprise">Business</string>
    <string name="cootek_classify_express">Delivery</string>
    <string name="cootek_classify_financial_products">Financial Products</string>
    <string name="cootek_classify_fraud">Phishing Scam</string>
    <string name="cootek_classify_headhunting">Headhunting</string>
    <string name="cootek_classify_house_agent">Real Estate Agent</string>
    <string name="cootek_classify_insurance">Insurance/Finance</string>
    <string name="cootek_classify_others">Others</string>
    <string name="cootek_classify_promote_sales">Salesman</string>
    <string name="make_call">Dial a number</string>
    <string name="pull_down_to_launcher">Swipe down on desktop to search</string>
    <string name="search_history">Search History</string>
    <string name="search_settings">Search settings</string>
    <string name="search_suggestions">Search suggestions</string>
    <string name="send_sms">Send a text message</string>
    <string name="set_search_fuzzy_token">Set fuzzy pinyin input in global search and contact search</string>
    <string name="t9_delete">Delete</string>
    <string name="t9_hidden">Hide</string>
    <string name="t9_num0">0</string>
    <string name="t9_num1">1</string>
    <string name="t9_num2">2ABC</string>
    <string name="t9_num3">3DEF</string>
    <string name="t9_num4">4GHI</string>
    <string name="t9_num5">5JKL</string>
    <string name="t9_num6">6MNO</string>
    <string name="t9_num7">7PQRS</string>
    <string name="t9_num8">8TUV</string>
    <string name="t9_num9">9WXYZ</string>
    <string name="trending_news">Trending News</string>
</resources>