<?xml version="1.0" encoding="utf-8"?>
<merge android:layout_width="match_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:id="@id/row_1" android:layout_width="match_parent" android:layout_height="wrap_content">
        <com.android.quicksearchbox.panels.widget.DialButtonView android:id="@id/one" android:layout_width="0.0dp" android:layout_height="match_parent" android:layout_weight="1.0" android:contentDescription="@string/t9_num1" />
        <com.android.quicksearchbox.panels.widget.DialButtonView android:id="@id/two" android:layout_width="0.0dp" android:layout_height="match_parent" android:layout_weight="1.0" android:contentDescription="@string/t9_num2" />
        <com.android.quicksearchbox.panels.widget.DialButtonView android:id="@id/three" android:layout_width="0.0dp" android:layout_height="match_parent" android:layout_weight="1.0" android:contentDescription="@string/t9_num3" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:id="@id/row_2" android:layout_width="match_parent" android:layout_height="wrap_content">
        <com.android.quicksearchbox.panels.widget.DialButtonView android:id="@id/four" android:layout_width="0.0dp" android:layout_height="match_parent" android:layout_weight="1.0" android:contentDescription="@string/t9_num4" />
        <com.android.quicksearchbox.panels.widget.DialButtonView android:id="@id/five" android:layout_width="0.0dp" android:layout_height="match_parent" android:layout_weight="1.0" android:contentDescription="@string/t9_num5" />
        <com.android.quicksearchbox.panels.widget.DialButtonView android:id="@id/six" android:layout_width="0.0dp" android:layout_height="match_parent" android:layout_weight="1.0" android:contentDescription="@string/t9_num6" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:id="@id/row_3" android:layout_width="match_parent" android:layout_height="wrap_content">
        <com.android.quicksearchbox.panels.widget.DialButtonView android:id="@id/seven" android:layout_width="0.0dp" android:layout_height="match_parent" android:layout_weight="1.0" android:contentDescription="@string/t9_num7" />
        <com.android.quicksearchbox.panels.widget.DialButtonView android:id="@id/eight" android:layout_width="0.0dp" android:layout_height="match_parent" android:layout_weight="1.0" android:contentDescription="@string/t9_num8" />
        <com.android.quicksearchbox.panels.widget.DialButtonView android:id="@id/nine" android:layout_width="0.0dp" android:layout_height="match_parent" android:layout_weight="1.0" android:contentDescription="@string/t9_num9" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:id="@id/row_4" android:layout_width="match_parent" android:layout_height="wrap_content">
        <com.android.quicksearchbox.panels.widget.DialButtonView android:id="@id/down" android:layout_width="0.0dp" android:layout_height="match_parent" android:layout_weight="1.0" android:contentDescription="@string/t9_hidden" />
        <com.android.quicksearchbox.panels.widget.DialButtonView android:id="@id/zero" android:layout_width="0.0dp" android:layout_height="match_parent" android:layout_weight="1.0" android:contentDescription="@string/t9_num0" />
        <com.android.quicksearchbox.panels.widget.DialButtonView android:id="@id/delete" android:layout_width="0.0dp" android:layout_height="match_parent" android:layout_weight="1.0" android:contentDescription="@string/t9_delete" />
    </LinearLayout>
</merge>
